# WhiteboardCleaner

./: CMakeLists.txt  README.md  imagescaler.cpp  whiteboardcleaner.cpp
